--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A wiki sharing app",
   "main": "index.js",
   "scripts": {
-    "test": "export NODE_ENV=test && jasmine"
+    "test": "export NODE_ENV=test && jasmine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/monicaep/blocipedia/issues"
   },
-  "homepage": "https://github.com/monicaep/blocipedia#readme"
+  "homepage": "https://github.com/monicaep/blocipedia#readme",
+  "devDependencies": {
+    "jasmine": "^3.0.0",
+    "request": "^2.83.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
