--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "homepage": "https://github.com/monicaep/blocipedia#readme",
   "devDependencies": {
     "jasmine": "^3.0.0",
+    "nodemon": "^1.19.1",
     "request": "^2.83.0"
   },
   "dependencies": {
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "morgan": "^1.9.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6",
+    "sequelize-cli": "^4.0.0"
   }
 }
