--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/monicaep/blocipedia#readme",
   "devDependencies": {
+    "faker": "^4.1.0",
     "jasmine": "^3.4.0",
     "nodemon": "^1.19.1",
     "request": "^2.83.0"
